Sec11_Chap127-NOK: cleaned code, code optimizations